# interpreter

./: .gitignore  CHANGELOG.md  README.md  s-interpreter.cabal
.stack-work/: stack.sqlite3
.stack-work/install/aarch64-osx/0ed32a198390936c7d0906da1281b45fc164716575eeb0c94ed91e412912513e/9.6.4/lib/aarch64-osx-ghc-9.6.4/s-interpreter-0.1.0.0-64urwCrdiSTIWNExGyPT7G-s-interpreter-lib/: Tools.hi
.stack-work/install/aarch64-osx/0ed32a198390936c7d0906da1281b45fc164716575eeb0c94ed91e412912513e/9.6.4/lib/aarch64-osx-ghc-9.6.4/s-interpreter-0.1.0.0-KllsoN5vXoHDJw2JXlYInq-s-interpreter-lib/: Tools.hi
lib/: Abstract.hs  Compiler.hs  ExtendedSemantics.hs  HaskellPrinter.hs  Helpers.hs  Interpreter.hs  LengthCalculator.hs  Partial.hs  ProgramPrinter.hs  Semantics.hs  TraceInterpreter.hs
lib/Interpreters/part-1/: HaskellPrinter.hs  Interpreter.hs  LengthCalculator.hs  ProgramPrinter.hs
lib/Interpreters/part-2/: Abstract.hs  Compiler.hs  Partial.hs  TraceInterpreter.hs
src/: Abstract.hs  IntroTyped.hs  Main.hs
test/: AdvancedTests.hs  InterpreterTests.hs  MainTests.hs  PrintingTests.hs  ProgramLengthTests.hs
test/v1/: AdvancedTests.hs  InterpreterTests.hs  PrintingTests.hs  ProgramLengthTests.hs
test/v2/: AbstractTests.hs
