cabal-version:       2.2

name:                s-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/s-interpreter#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md


library s-interpreter-lib
    exposed-modules:  Interpreter, HaskellPrinter, LengthCalculator, ProgramPrinter, Compiler, TraceInterpreter, Partial, Abstract
    hs-source-dirs:   lib
    build-depends:    base >= 4.7 && < 5, text, template-haskell
    default-language: Haskell2010       

executable s-interpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, text, s-interpreter-lib, template-haskell
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite s-interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainTests.hs
  other-modules:       InterpreterTests, ProgramLengthTests, PrintingTests, AdvancedTests
  build-depends:       base, HUnit, s-interpreter-lib, text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010